--- a/main/Email.apk/res/values-cs/strings.xml
+++ b/main/Email.apk/res/values-cs/strings.xml
@@ -157,12 +157,12 @@
     <string name="notification_to_account">pro %1$s</string>
     <string name="notification_multiple_new_messages_fmt">Nové zprávy: %1$d</string>
     <string name="account_name_display_all">Všechny účty</string>
-    <string name="mailbox_name_server_inbox">Doručená pošta</string>
-    <string name="mailbox_name_server_outbox">Odeslaná pošta</string>
-    <string name="mailbox_name_server_drafts">Koncepty</string>
-    <string name="mailbox_name_server_trash">Koš</string>
-    <string name="mailbox_name_server_sent">Odesláno</string>
-    <string name="mailbox_name_server_junk">Nevyžádané</string>
+	<string name="mailbox_name_server_inbox">Inbox</string>
+	<string name="mailbox_name_server_outbox">Outbox</string>
+	<string name="mailbox_name_server_drafts">Drafts</string>
+	<string name="mailbox_name_server_trash">Trash</string>
+	<string name="mailbox_name_server_sent">Sent</string>
+	<string name="mailbox_name_server_junk">Junk</string>
     <string name="mailbox_name_display_inbox">Doručená pošta</string>
     <string name="mailbox_name_display_outbox">Pošta k odeslání</string>
     <string name="mailbox_name_display_drafts">Koncepty</string>
