--- a/main/Email.apk/res/values-sk/strings.xml
+++ b/main/Email.apk/res/values-sk/strings.xml
@@ -159,12 +159,12 @@ Môžete to zmeniť v nastaveniach kedykoľvek."</string>
 <string name="notification_to_account">pre %1$s</string>
 <string name="notification_multiple_new_messages_fmt">Nové správy: %1$d</string>
 <string name="account_name_display_all">Všetky účty</string>
-<string name="mailbox_name_server_inbox">Doručená pošta</string>
-<string name="mailbox_name_server_outbox">Odoslaná pošta</string>
-<string name="mailbox_name_server_drafts">Koncepty</string>
-<string name="mailbox_name_server_trash">Kôš</string>
-<string name="mailbox_name_server_sent">Odoslané</string>
-<string name="mailbox_name_server_junk">Nevyžiadaná pošta</string>
+<string name="mailbox_name_server_inbox">Inbox</string>
+<string name="mailbox_name_server_outbox">Outbox</string>
+<string name="mailbox_name_server_drafts">Drafts</string>
+<string name="mailbox_name_server_trash">Trash</string>
+<string name="mailbox_name_server_sent">Sent</string>
+<string name="mailbox_name_server_junk">Junk</string>
 <string name="mailbox_name_display_inbox">Doručená pošta</string>
 <string name="mailbox_name_display_outbox">Pošta na odoslanie</string>
 <string name="mailbox_name_display_drafts">Koncepty</string>
