--- a/main/LewaLauncherX.apk/res/values-cs/strings.xml
+++ b/main/LewaLauncherX.apk/res/values-cs/strings.xml
@@ -92,10 +92,17 @@
     <string name="pref_title_wallpaper_scrolling">Posouvání tapety</string>
     <string name="pref_summary_wallpaper_scrolling">Tapeta se pohybuje společně s panely plochy</string>
     <string name="pref_title_action_updown">Gesta plochy</string>
-    <string name="pref_summary_action_updown">Přejetím na ploše nahoru se otevře menu a přejetím dolu se otevřou oznámení</string>
+    <string name="pref_summary_action_updown">Zobrazit oznámení tažením prstu dolů po ploše</string>
+	<string name="pref_title_shake">Zatřesením uspořádat ikony</string>
+	<string name="pref_summary_shake">"Zatřeste telefonem pro rychlé uspořádání ikon na aktuální ploše"</string>
+	<string name="shake_degree_title">Citlivost zatřesení</string>
+	<string name="shake_degree_summary">Nastavení intenzity třesení pro uspořádání ikon</string>
+	<string name="shake_degree_gentle">Slabě</string>
+	<string name="shake_degree_common">Běžně</string>
+	<string name="shake_degree_force">Silně</string>
     <string name="pref_title_lewa_lockscreen">Použít LeWa lockscreen</string>
     <string name="pref_hide_status_bar">Skrýt stavový řádek když je zamknutý displej</string>
-    <string name="pref_title_resetlauncher">Obnovení spouštěče</string>
+    <string name="pref_title_resetlauncher">Resetovat spouštěč</string>
     <string name="pref_summary_resetlauncher">Obnovit výchozí nastavení spouštěče</string>
     <string name="pref_title_update">Kontrola aktualizací</string>
     <string name="pref_summary_update">Kontrola Lewa spouštěče na nejnovější verzi</string>
