--- a/main/LewaLauncherX.apk/res/values-sk/strings.xml
+++ b/main/LewaLauncherX.apk/res/values-sk/strings.xml
@@ -92,12 +92,19 @@ Aktuálne dostupnej pamäte je %2$d M"</string>
 	<string name="pref_desktop_effect_summary">Posúvací efekt pri zmene obrazovky</string>
     <string name="pref_title_wallpaper_scrolling">Posúvať pozadie</string>
     <string name="pref_summary_wallpaper_scrolling">Pozadie obrázka sa posúva spoločne s pracovnou plochou</string>
-    <string name="pref_title_action_updown">Desktop gestá</string>
-	<string name="pref_summary_action_updown">Z plochy posunom nahor otvoríte menu a posunom nadol otvoríte oznámenia</string>
+    <string name="pref_title_action_updown">Gestá na ploche</string>
+	<string name="pref_summary_action_updown">Zobraziť oznámenia potiahnutím prsta nadol po ploche</string>
+	<string name="pref_title_shake">Potrasením usporiadať ikony</string>
+	<string name="pref_summary_shake">"Potraste telefónom pre rýchle usporiadanie ikon na aktuálnej ploche"</string>
+	<string name="shake_degree_title">Citlivosť potrasenia</string>
+	<string name="shake_degree_summary">Nastavenie intenzity trasenia pre usporiadanie ikon</string>
+	<string name="shake_degree_gentle">Slabo</string>
+	<string name="shake_degree_common">Bežne</string>
+	<string name="shake_degree_force">Silno</string>	
     <string name="pref_title_lewa_lockscreen">Use LeWa lockscreen</string>
     <string name="pref_hide_status_bar">Skryť stavovú lištu pri uzamknutí</string>
-    <string name="pref_title_resetlauncher">Resetovať Launcher</string>
-    <string name="pref_summary_resetlauncher">Resetovať Launcher</string>
+    <string name="pref_title_resetlauncher">Resetovať spúšťač</string>
+    <string name="pref_summary_resetlauncher">Obnoviť predvolené nastavenia spúšťača</string>
     <string name="pref_title_update">Hľadať aktualizáciu</string>
     <string name="pref_summary_update">Zistí, či je nainštalovaná najnovšia verzia Lewa Launcher</string>
     <string name="message_resetlauncher">Prednastavia sa všetky ikony, widgety a pozícia obrazovky.</string>
