--- a/main/PIM.apk/res/values-sk/strings.xml
+++ b/main/PIM.apk/res/values-sk/strings.xml
@@ -1291,7 +1291,7 @@ Opakované odoslanie..."</string>
 <string name="label_mmsframent">Správy</string>
 <string name="label_calllogframent">Hovor</string>
 <string name="label_updatefragment">aktualizácia Detailu</string>
-<string name="label_loaderframents">Kontakty</string>
+<string name="label_loaderframents">Detaily</string>
 <string name="label_calllog">Register hovorov</string>
 <string name="label_allcontacts">Všetky kontakty</string>
 <string name="label_mms">SMS</string>
