--- a/main/MtkBt.apk/res/values-cs/strings.xml
+++ b/main/MtkBt.apk/res/values-cs/strings.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="bluetooth_hid_lable">Bezdrátové Vstupní Zařízení</string>
+<string name="bluetooth_hid_lable">Bezdrátové vstupní zařízení</string>
 <string name="bluetooth_hid_connect">Připojit</string>
 <string name="bluetooth_hid_disconnect">Odpojit</string>
 <string name="bluetooth_hid_unplug">Odpojit</string>
-<string name="bluetooth_hid_addnewdevice">Přidat Nové Zařízení</string>
-<string name="bluetooth_hid_paireddevices">Spárovat Bezdrátové Vstupní Zařízení</string>
-<string name="bluetooth_hid_bt_ok">Povolení Bluetooth Úspěšné!</string>
-<string name="bluetooth_hid_bt_fail">Povolení Bluetooth Selhalo!</string>
-<string name="bluetooth_hid_disconnect_confirm_title">Odpojit Bezdrátové Vstupní Zařízení</string>
-<string name="bluetooth_hid_unplug_confirm_title">Odpojit Bezdrátové Vstupní Zařízení</string>
-<string name="bluetooth_hid_auth_confirm_title">Příjmout Bezdrátové Vstupní Zařízení</string>
+<string name="bluetooth_hid_addnewdevice">Přidat nové zařízení</string>
+<string name="bluetooth_hid_paireddevices">Spárovat bezdrátové vstupní zařízení</string>
+<string name="bluetooth_hid_bt_ok">Povolení bluetooth úspěšné!</string>
+<string name="bluetooth_hid_bt_fail">Povolení bluetooth selhalo!</string>
+<string name="bluetooth_hid_disconnect_confirm_title">Odpojit bezdrátové vstupní zařízení</string>
+<string name="bluetooth_hid_unplug_confirm_title">Odpojit bezdrátové vstupní zařízení</string>
+<string name="bluetooth_hid_auth_confirm_title">Přijmout bezdrátové vstupní zařízení</string>
 <string name="bluetooth_hid_summary_connected">Připojeno</string>
 <string name="bluetooth_hid_summary_connecting">Připojování</string>
 <string name="bluetooth_hid_summary_not_connected">Spárováno ale nepřipojeno</string>
@@ -21,23 +21,23 @@
 <string name="bluetooth_hid_connect_request_notify_ticker">Požadavek na připojení bezdrátového vstupního zařízení</string>
 <string name="bluetooth_hid_connect_request_notify_title">Požadavek na připojení bezdrátového vstupního zařízení</string>
 <string name="bluetooth_hid_connected_notify_message">Odpojit připojení s %1$s</string>
-<string name="bluetooth_hid_connect_request_notify_message">Povolit dotaz na připojení od %1$s or not</string>
-<string name="bluetooth_hid_connect_ok">Bezdrátové Vstupní Zařízení %1$s připojeno úspěšně!</string>
-<string name="bluetooth_hid_connect_fail">Bezdrátové Vstupní Zařízení %1$s připojení selhalo!</string>
-<string name="bluetooth_hid_disconnect_ok">Bezdrátové Vstupní Zařízení %1$s odpojeno úspěšně!</string>
-<string name="bluetooth_hid_disconnect_fail">Bezdrátové Vstupní Zařízení %1$s odpojení selhalo!</string>
-<string name="bluetooth_hid_unplug_ok">Bezdrátové Vstupní Zařízení %1$s odpojeno úspěšně!</string>
-<string name="bluetooth_hid_unplug_fail">Bezdrátové Vstupní Zařízení %1$s odpojení selhalo!</string>
-<string name="bluetooth_hid_disconnect_confirm">Chcete odpojit bezdrátové Vstupní Zařízení %1$s?</string>
-<string name="bluetooth_hid_unplug_confirm">Chcete odpojit bezdrátové Vstupní Zařízení %1$s?</string>
-<string name="bluetooth_hid_auth_confirm">Chcete příjmout bezdrátové Vstupní Zařízení %1$s?</string>
+<string name="bluetooth_hid_connect_request_notify_message">Povolit dotaz na připojení od %1$s</string>
+<string name="bluetooth_hid_connect_ok">Bezdrátové vstupní zařízení %1$s úspěšně připojeno!</string>
+<string name="bluetooth_hid_connect_fail">Bezdrátové vstupní zařízení %1$s nepřipojeno!</string>
+<string name="bluetooth_hid_disconnect_ok">Bezdrátové vstupní zařízení %1$s úspěšně odpojeno!</string>
+<string name="bluetooth_hid_disconnect_fail">Bezdrátové vstupní zařízení %1$s nebylo odpojeno!</string>
+<string name="bluetooth_hid_unplug_ok">Bezdrátové vstupní zařízení %1$s úspěšně odpojeno!</string>
+<string name="bluetooth_hid_unplug_fail">Bezdrátové vstupní zařízení %1$s nebylo odpojeno!</string>
+<string name="bluetooth_hid_disconnect_confirm">Chcete odpojit bezdrátové vstupní zařízení %1$s?</string>
+<string name="bluetooth_hid_unplug_confirm">Chcete odpojit bezdrátové vstupní zařízení %1$s?</string>
+<string name="bluetooth_hid_auth_confirm">Chcete přijmout bezdrátové vstupní zařízení %1$s?</string>
 <string name="bluetooth_hid_summary_disconnecting">Odpojování...</string>
 <string name="bt_opp_push_file_name">bluetooth_share.html</string>
 <string name="bt_opp_notification_in_coming_ticker">Požadavek na přijetí souboru</string>
 <string name="bt_opp_notification_in_coming_title">Požadavek na přijetí souboru (od %1$s)</string>
 <string name="bt_opp_notification_in_coming_message">Vyberte pro akceptování příchozího souboru.</string>
 <string name="bt_opp_notification_in_ongoing_ticker">Příchozí soubor</string>
-<string name="bt_opp_notification_in_ongoing_message">Příjmám: %1$s (%2$s)</string>
+<string name="bt_opp_notification_in_ongoing_message">Přijímám: %1$s (%2$s)</string>
 <string name="bt_opp_notification_out_ongoing_ticker">Odchozí soubor</string>
 <string name="bt_opp_notification_out_ongoing_message">Odesílám: %1$s (%2$s)</string>
 <string name="bt_opp_cancel_task_title">Přenos souboru</string>
@@ -52,12 +52,12 @@
 <string name="bt_oppc_push_action_label">Bluetooth</string>
 <string name="bt_oppc_push_toast_sending_file">Odesílám soubor k %1$s</string>
 <string name="bt_oppc_push_toast_sending_files">Odesílám soubory k %1$s</string>
-<string name="bt_oppc_push_toast_unsupported_uri">Nepodporovaný obsahke sdílení: %1$s</string>
-<string name="bt_oppc_push_toast_unknown_device">neznámé zařízení</string>
+<string name="bt_oppc_push_toast_unsupported_uri">Nepodporovaný obsah ke sdílení: %1$s</string>
+<string name="bt_oppc_push_toast_unknown_device">Neznámé zařízení</string>
 <string name="bt_opps_toast_storage_unavailable">Není SD karta nebo dostatek místa pro příchozí soubor(y).</string>
 <string name="bt_opps_push_toast_invalid_request">Chybně sdílený požadavek z ovládacího zařízení.</string>
 <string name="permlab_bluetoothWhitelist">Bílá listina přístupu bluetooth zařízení.</string>
-<string name="permdesc_bluetoothWhitelist">Povolit aplikací dát Buetooth zařízení na bílou listinu, umožnit zařízení posílat soubory do zařízení bez potvrzování.</string>
+<string name="permdesc_bluetoothWhitelist">Povolit aplikací dát Bluetooth zařízení na bílou listinu, umožnit zařízení posílat soubory do zařízení bez potvrzování.</string>
 <string name="permlab_handoverStatus">Přijímat vysílání přenosu BT handover</string>
 <string name="permdesc_handoverStatus">Vždy přijímat stav přenosu handover z bluetooth.</string>
 <string name="bluetooth_pan_GN_authorize_confirm_title">Povolit požadavek autorizace Group Ad-hoc Network</string>
@@ -86,7 +86,7 @@
 <string name="bluetooth_pan_GN_connect_fail">Připojení Group Ad-hoc Network s %1$s selhalo!</string>
 <string name="bluetooth_pan_NAP_connect_ok">Připojení Network Access Point s %1$s úspěšné!</string>
 <string name="bluetooth_pan_NAP_connect_fail">Připojení Network Access Point s %1$s selhalo!</string>
-<string name="bluetooth_pan_NAP_unavailable">Služba Network Access Points z %1$s je nedostupná</string>
+<string name="bluetooth_pan_NAP_unavailable">Služba Network Access Points z %1$s je nedostupná!</string>
 <string name="bluetooth_pan_GN_disconnect_ok">Odpojení Group Ad-hoc Network s %1$s úspěšné!</string>
 <string name="bluetooth_pan_GN_disconnect_fail">Odpojení Group Ad-hoc Network s %1$s selhalo!</string>
 <string name="bluetooth_pan_NAP_disconnect_ok">Odpojení Network Access Point s %1$s úspěšné!</string>
@@ -115,24 +115,24 @@
 <string name="bluetooth_pbap_server_authorize_alwaysallowed">Vždy povolit?</string>
 <string name="app_label">Bluetooth</string>
 <string name="app_description">Profil balíků bluetooth</string>
-<string name="bt_base_activity_busy_message">Načítám. Prosím čekejte</string>
+<string name="bt_base_activity_busy_message">Načítám. Prosím čekejte...</string>
 <string name="bt_base_activity_service_disconnected">Služba odpojena!</string>
 <string name="bt_base_profile_feature_disabled">Nemohu použít vlastnost vypnutého bluetooth.</string>
 <string name="bt_share_mgmt_tab_in_title">Stáhnout</string>
 <string name="bt_share_mgmt_tab_out_title">Načíst</string>
-<string name="bt_share_mgmt_tab_menu_clear">Smazat vše</string>
+<string name="bt_share_mgmt_tab_menu_clear">Vymazat vše</string>
 <string name="bt_share_mgmt_tab_dialog_title">Přenos souborů</string>
 <string name="bt_share_mgmt_tab_dialog_yes">Zkusit znovu</string>
 <string name="bt_share_mgmt_tab_dialog_no">Vyčistit</string>
-<string name="bt_share_mgmt_tab_dialog_message_recfail">Soubor %1$s od %2$s nebyl přijmut.</string>
-<string name="bt_share_mgmt_tab_dialog_message_resend">Soubor %1$s nebly odeslán %2$s.</string>
+<string name="bt_share_mgmt_tab_dialog_message_recfail">Soubor %1$s od %2$s nebyl přijat.</string>
+<string name="bt_share_mgmt_tab_dialog_message_resend">Soubor %1$s nebyl odeslán %2$s.</string>
 <string name="bt_share_mgmt_tab_dialog_message_sent">Soubor %1$s byl odeslán %2$s.</string>
 <string name="bt_share_mgmt_notification_ticker">Historie sdílení Bluetooth</string>
 <string name="bt_share_mgmt_notification_title">Historie sdílení Bluetooth</string>
-<string name="bt_share_mgmt_notification_message">Vyber k náhledu historii sdílení Bluetooth.</string>
+<string name="bt_share_mgmt_notification_message">Vyberte k náhledu historii sdílení Bluetooth.</string>
 <string name="bt_share_openfile_title">Otevřít soubor</string>
 <string name="bt_share_openfile_message_invalid_param">Nesprávný soubor: %1$s (%2$s)</string>
-<string name="bt_share_openfile_message_unsupported_type">Nepodporvaný typ souboru: %1$s</string>
+<string name="bt_share_openfile_message_unsupported_type">Nepodporovaný typ souboru: %1$s</string>
 <string name="bt_share_openfile_message_resource_not_found">Soubor nenalezen: %1$s</string>
 <string name="bt_share_openfile_confirm">OK</string>
 </resources>
