--- a/main/SystemUI.apk/res/values-cs-land/strings.xml
+++ b/main/SystemUI.apk/res/values-cs-land/strings.xml
@@ -1,3 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
+<resources>
     <string name="toast_rotation_locked">Obrazovka byla uzamkutá na šířku.</string>
 </resources>
