--- a/main/SystemUI.apk/res/values-cs/strings.xml
+++ b/main/SystemUI.apk/res/values-cs/strings.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
-    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
-    <string name="config_systemBarComponent">com.android.systemui.statusbar.tablet.TabletStatusBar</string>
-    <string name="status_bar_date_formatter">"%2$s
-%1$s"</string>
     <string name="gemini_default_sim_always_ask">Vždy se zeptat</string>
     <string name="accessibility_phone_four_bars">Čtyři čárky signálu telefonní sítě.</string>
     <string name="sim_switch_tip">Tato SIM je nastavena jako výchozí pro %s. Pro změnu výchozí SIM podržte a stáhněte stavový řádek.</string>
